--- a/Ficha Clinica/paciente 1.html
+++ b/Ficha Clinica/paciente 1.html
@@ -48,6 +48,7 @@
         <h1 class="text-light"><a href="index.html"></a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <p>cambio para printgrupal2</p>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
